Prevent long headers from breaking on narrow viewports

--- a/src/core.less
+++ b/src/core.less
@@ -112,7 +112,7 @@ h1, h2, h3, h4 {
 }
 
 h1 {
-    font-size: @text-size-heading*.8;
+    font-size: @text-size-heading * 0.7;
 
     @media @m {
         font-size: @text-size-heading;
@@ -122,7 +122,7 @@ h1 {
 h2,
 .h2 {
     color: @brand-highlight;
-    font-size: @text-size-heading*.8;
+    font-size: @text-size-heading * 0.7;
     line-height: 1;
     text-transform: uppercase;
 
